package java_design_patterns.A_adapter_pattern.ex_movable;

public interface CarUsInterface {
        double getTopSpeedInMph();
        double getLengthInInch();
}
