package java_design_patterns.A_adapter_pattern.ex_movable;

public interface EuCarAdapterInterface {
    double getTopSpeedInKph();  //km/h
    double getLengthInMeter();
}
