@startuml
class UsEuCarAdapter {
- CarUSInterface car

}
interface CarUSInterface {
+ double getTopSpeedInKph()
+ double getLengthInMeter()
}

interface EuCarAdapterInterface {
+ double getTopSpeedInKph()
+ double getLengthInMeter()
}

class FordMustang {

}


EuCarAdapterInterface <|.. UsEuCarAdapter
CarUSInterface <|.. FordMustang
@enduml